<resources>
    <string name="app_name">Ft_Hangouts</string>
    <string name="myContactsTitle">My contacts</string>
    <string name="displayContactTitle">Contact:</string>
    <string name="createContactTitle">Create a contact</string>
    <string name="messageTitle">Send a message: </string>
    <string name="firstNameLabel">First Name *</string>
    <string name="lastNameLabel">Last Name *</string>
    <string name="phoneLabel">Phone *</string>
    <string name="mailLabel">Mail</string>
    <string name="addressLabel">Address</string>
    <string name="addButton">Add</string>
    <string name="createButton">Create</string>
    <string name="deleteButton">Delete</string>
    <string name="editButton">Edit</string>
    <string name="saveButton">Save</string>
    <string name="contactCreated">Contact created</string>
    <string name="contactNotCreated">Contact not created</string>
    <string name="contactUpdated">Contact updated</string>
    <string name="contactNotUpdated">Contact not updated</string>
    <string name="contactIsDeleted">Contact is deleted</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGray">Gray</string>
    <string name="colorRed">Red</string>
    <string name="colorGreen">Green</string>
    <string name="messageSendButton">Send</string>
    <string name="messageButton">Message</string>
    <string name="noPermission">No permission</string>
    <string name="smsSend">Sms send</string>
    <string name="wrongNumber">Wrong number entered</string>
    <string name="lastNameEmpty">Field \'Last name\' is empty</string>
    <string name="firstNameEmpty">Field \'First name\' is empty</string>
    <string name="meMessage">Me:</string>
</resources>
