<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tvisenti.ft_hangouts.DisplayContact">

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/deleteButton"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/textAddress"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstNameLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/textFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Arthur"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

    <TextView
        android:id="@+id/lastNameLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastNameLabel"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textFirstName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/textLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Dent"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel2" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneLabel"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textLastName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/textPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="0642424242"
        android:inputType="phone"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

    <TextView
        android:id="@+id/mailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textPhone"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/textMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="adent@student.42.fr"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mailLabel" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressLabel"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textMail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/textAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Bételgeuse"
        android:inputType="textPostalAddress"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/textAddress"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textAddress"
        app:layout_constraintLeft_toRightOf="@+id/saveButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/deleteButton"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>

</ScrollView>
